--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "jsdom": "^27.2.0",
+    "netlify-cli": "^23.13.0",
     "vite": "^7.1.7",
     "vitest": "^4.0.13"
   }
